# AI-Deepfake-Detector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: prepare_split.py
src/deepfake_detector/: __init__.py  attention.py  data.py  evaluate.py  metrics.py  model.py  predict.py  train.py  utils.py
