[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-deepfake-detector"
version = "0.1.0"
description = "Attention-guided MobileNetV2-CBAM-LSTM deepfake detection framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BAAlyoubi" }]
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "Pillow>=10.0",
  "tqdm>=4.66",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["src"]
